[metadata]
name = khl.py
version = 0.3.16
author = TWT233
author_email = TWT2333@outlook.com
description = Python SDK for kaiheila.cn API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TWT233/khl.py
project_urls =
    Bug Tracker = https://github.com/TWT233/khl.py/issues
    Tutorial = https://github.com/TWT233/khl.py/tree/main/example
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.6
install_requires =
    aiohttp
    pycryptodomex
    apscheduler

[options.packages.find]
where = .
